[tool.black]
line-length = 120

[tool.interrogate]
badge-format = "svg"
fail-under = 90
generate-badge = ".github/badges"
ignore-init-method = true
ignore-init-module = true
verbose = 1

[tool.isort]
profile = "black"

[tool.poetry]
name = "nms-name-gen"
version = "1.0.0"
description = "Name generator for No Man's Sky"
authors = ["Michael Paul <31833332+MickeyPvX@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
click = "^8.1.7"
pydantic = "^2.9.2"

[tool.poetry.scripts]
nms-name-gen = "nms_name_gen:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
